tdf#107196: fix firebird relationship

Let's spread string sanitizing
see https://bugs.documentfoundation.org/show_bug.cgi?id=107196#c3

Furthermore, in example file from the bugtracker,
relationship between f2 fields were present several times.
So I had to delete it several times to really remove it.

Change-Id: I4fbe10c479af3d4fa5ccfb290f128fdd2a6d49a9